logging info added